fix(info-tile): make sure icon does not grow too large on older browsers

--- a/src/components/info-tile/info-tile.scss
+++ b/src/components/info-tile/info-tile.scss
@@ -130,7 +130,7 @@ a {
     );
 
     @supports not (container-type: size) {
-        height: min(20%, 5rem);
+        width: max(10%, 3rem);
     }
 
     .has-circular-progress & {
